unit and functional tests, misc refactor